feat(Admin): Add admin routes for bulk actions
